// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User object methods delete should call User DAO deleteUser 1`] = `
Array [
  Array [
    "testUserId",
  ],
]
`;

exports[`User object methods generateJwt - happy path should call jwt.sign 1`] = `
Array [
  Array [
    Object {
      "email": "test@email.com",
      "exp": 1641081600,
      "id": "testUserId",
    },
    "test-secret",
  ],
]
`;

exports[`User static get - happy path should return a user 1`] = `
User {
  "email": "test@email.com",
  "fullName": "Full Name",
  "hash": "test-hash",
  "id": "testUserId",
  "nickname": "Nickname",
  "preferences": Object {
    "defaultListId": "test-default-list-id",
  },
  "salt": "test-salt",
}
`;

exports[`User static getByEmail - happy path should return a user 1`] = `null`;

exports[`User static patch should call user DAO patch 1`] = `
Array [
  Array [
    Object {
      "email": "test@email.com",
      "fullName": "Full Name",
      "hash": "test-hash",
      "id": "testUserId",
      "nickname": "Nickname",
      "preferences": Object {
        "defaultListId": "test-default-list-id",
      },
      "salt": "test-salt",
    },
  ],
]
`;
